--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="or">or</string>
     <string name="anonymous">Continue Anonymously</string>
     <string name="title_activity_login">Login</string>
-    <string name="username">Username (e.g. me@mytwitface.us.gov)</string>
+    <string name="username">Username (e.g. me@mytwitface.gov)</string>
     <string name="password">Password (e.g. 4Numb3rsOn Luggag3)</string>
     <string name="support"> <a href="http://www.google.com">NEED HELP? CLICK HERE!</a></string>
 </resources>
