--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_message">MessageActivity</string>
+    <string name="title_activity_maps">Map</string>
+
+
+    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
+        AIzaSyB2aRNb499bube0OpRXDsq4BcndNznOLkk
+    </string>
 </resources>
