--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">MessageInABottle</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="create_message">Create A Message</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_message">MessageActivity</string>
     <string name="title_activity_maps">Map</string>
+    <string name="create_button">Drop Bottle</string>
 
 
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
