--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyDdqcrLOV_2jR5mJKh1Us1iDDDfE-0WRlQ
     </string>
+    <string name="title_activity_inventory">Inventory</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
 </resources>
