In order to add new preferences: 	XML: 	1: Create a new entry in pref_headers.xml 		This entry contains: 			fragment 			title 			optional: drawable icon 	2: Create a new file, pref_preferencesName.xml 		This entry contains: 			A list of all preferences you will use, such as 			<SwitchPreference/> 			<EditTextPreference/> 			<ListPreference/> 			<RingtonePreference/> 		These preferences require: 			android:key="thing_your_keying_preference_to" 			android:title=@string/string_name 			android:summary=@string/string_description 			android:defaultValue=(Appropriate setting type) 			and appropriate entries and values, inputTypes, etc. 		The Key is what saves the preference, and as such is important. 	3: Add all appropriate strings to strings.xml
	Java:
	1: Add your new fragment to the protected boolean isValidFragment
		|| newFragmentNameFragment.class.getName().equals(fragmentName)
	2: Create a new public static class with your Fragment's name:
		@TargetApi(Build.VERSION_CODES.Honeycomb)
		public static class newFragmentNameFragment extends PreferenceFragment
			@Override
			public void onCreate(Bundle savedInstanceState){stuff...}
			@Override
			public boolean onOptionsItemSelected (MenuItem item){stuff...}
		The first is for creation of the preferences page with preexisting settings,
		The second is for retrieving presses I believe.
It appears that switches auto-bind.
The other preferences require the following line within onCreate within the appropriate fragment:
	bindPreferenceSummaryToValue(findPreference("preference_key"));

The above is to the best of my knowledge.
Next comes the insertion of settings and determining how to use said settings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,14 @@
 
     <!-- Strings related to Settings -->
 
+    <string name="pref_header_bottles">Bottle Settings</string>
+    <string name="pirate_mouth">Pirate\'s Mouth</string>
+        <string name="pirate_mouth_description">Enable adult language</string>
+
     <!-- Example General settings -->
+
+
+
     <string name="pref_header_general">General</string>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
