Preferences appear to exist without crashing anything on phone. Need to still implement most of the coding for the Pirate Mode, the Color Scheme selection, the filtering system. Need to merge to implement the deletion so there is something to actually warn on and need to find out how we plan to implement a social media link.
Additionally, need to make sure that the preferences update everything using
the on preference changes commands.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,10 +33,11 @@
                 <item>Awake Pirate</item>
                 <item>Caffeinated Pirate</item>
             </string-array>
+            <!-- You'd think this would be an integer array, but that crashed the entire app. Fix appreciated - Brennen-->
             <string-array name="pickupFreq_values">
-                <item>60</item>
-                <item>6</item>
-                <item>.6</item>
+                <item>600</item> <!-- 60 seconds-->
+                <item>60</item>  <!-- 6 seconds-->
+                <item>6</item>   <!-- .6 seconds-->
             </string-array>
 
         <string name="maps">Enable Maps</string>
