FOr some reason, ParseUI-Widget is showing changes. Implementation of the Log Out Button is as follows: 	Created a Preference with associated Key 	Use Key to link a preference style button 	Attach an on click listener to the button 	Call ParseUser.logout() when button click 	Launch intent redirecting to Login Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,10 @@
 
     <string name="socialLink">Social Media Link</string>
         <string name="socialLink_description">Opens up a new screen to link social media and Message In A Bottle accounts</string>
+
+    <string name="logout">Log Out</string>
+        <string name="logout_button"></string>
+        <string name="logout_description">Log out of this device</string>
     <!-- Example General settings -->
 
 
