Added Google Map and RecyclerView to second tab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,8 @@
     <string name="title_activity_welcome2">welcomeActivity2</string>
     <string name="drifting_title">Here be ye loot</string>
     <string name="title_activity_comments">CommentsActivity</string>
-
+    <string name="static_label">Here be what pirates be sayin\' </string>
+    <string name="cast_bottle_title">Cast yer bottle to the sea!</string>
 
 
 
@@ -32,8 +33,6 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="plus_sign_out">Switch Google+ account</string>
-    <string name="plus_disconnect">Disconnect from Google+</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
