--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Message In A Bottle</string>
     <string name="create_message">Create A Message</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_message">Create a Bottle</string>
+    <string name="title_activity_message">New Message</string>
     <string name="title_activity_maps">Map</string>
     <string name="create_button">Drop Bottle</string>
 
@@ -150,4 +150,8 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
 
+    <string-array name="types_of_bottles">
+        <item>Create a Bottle</item>
+        <item>Create a Pirate Mast</item>
+    </string-array>
 </resources>
