--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="drifting_title">Here be ye loot</string>
     <string name="title_activity_comments">CommentsActivity</string>
     <string name="static_label">Here be what pirates be sayin\' </string>
+    <string name="user_label">Here be what ye sayin\' </string>
     <string name="cast_bottle_title">Cast yer bottle to the sea!</string>
 
 
