I believe that I have now covered any possible scenario extensively in case someone tries to drop a bottle without a location. I believe this branch is ready to be merged now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="title_activity_comments">CommentsActivity</string>
     <string name="static_label">Here be what pirates be sayin\' </string>
     <string name="cast_bottle_title">Cast yer bottle to the sea!</string>
+    <string name="warning_no_location">Warning: No Location Detected</string>
 
 
     <string name="title_activity_login">Sign in</string>
