Overhauling all the parse adapters with local SQLite, WIP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+
+    //Content Authority
+    <string name="content_authority">com.yarmatey.messageinabottle.sql.provider</string>
+
     <string name="app_name">Message In A Bottle</string>
     <string name="create_message">Create A Message</string>
     <string name="action_settings">Settings</string>
